--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -29,7 +29,8 @@
 
     <main id="perfil">
         <section class="info">
-            <img src="https://via.placeholder.com/150" alt="Foto de perfil" class="photo">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-UgGLhwGffq47cGgbFXcrE3J2H7AAsJfdLQ&s"
+                alt="Foto de perfil" class="photo">
             <h2>Nombre del Usuario</h2>
             <p>Email: </p>
             <p>Teléfono: </p>
